* PHIL4010: Prelim: Q:1,2,3,5: complete

--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -100,7 +100,7 @@
 % \setupindenting[medium, yes]
 
 % Contents (https://www.contextgarden.net/Table_of_Contents)
-\setupcombinedlist [content] [list={part, chapter, section}]
+\setupcombinedlist [content] [list={part, chapter, section, exercises}]
 
 % Bibliography
 % Bibliography (https://www.contextgarden.net/Bibliography_mkiv)
